[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
tokio = { version = "1.17.0" }
